--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^11.11.7",
+    "gsap": "^3.12.5",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
